# beacon-in-a-box

./: .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile.base  README.md  docker-compose.yaml  keygen.sh
biab_utils/: Cargo.toml
biab_utils/src/: hsm_signer.rs  lib.rs  messages.rs  tcp_server.rs
data_sync/: Cargo.toml
data_sync/src/: main.rs
http_portal/: Cargo.toml
http_portal/src/: dag_json.rs  main.rs
pulse_generator/: Cargo.toml
pulse_generator/src/: cid_str.rs  main.rs  payload.rs  pulse_assembler.rs  stitch_config.rs  tcp_server.rs  timing.rs
python_example/: get_randomness.py
rng_factory/: Cargo.toml
rng_factory/src/: main.rs
