[package]
name = "biab_utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "biab_utils"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.25"
simple_logger = "5.0.0"
serde = { version = "1.0.217", features = ["derive"] }
rmp-serde = "1.3.0"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
anyhow = "1.0.95"
