[package]
name = "biab_utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "biab_utils"
path = "src/lib.rs"

[dependencies]
twine_protocol.workspace = true
tokio.workspace = true
log.workspace = true
serde.workspace = true
chrono.workspace = true
anyhow.workspace = true
yubihsm = { version = "0.42.1", features = ["http-server", "usb", "passwords", "untested"] }
rsa = "0.9.8"
simple_logger = "5.0.0"
rmp-serde = "1.3.0"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
