[package]
name = "data_sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data_sync"
path = "src/main.rs"

[dependencies]
biab_utils = { path = "../biab_utils" }
twine = { git = "https://github.com/twine-protocol/twine-rs.git", rev = "e22a80ee7bc3eaa191214f961b511b564496232b", features = ["build", "rsa"] }
twine_sql_store = { git = "https://github.com/twine-protocol/twine-rs.git", rev = "e22a80ee7bc3eaa191214f961b511b564496232b", package = "twine_sql_store", features = ["mysql", "runtime-tokio"]}
twine_http_store =  { git = "https://github.com/twine-protocol/twine-rs.git", rev = "e22a80ee7bc3eaa191214f961b511b564496232b", package = "twine_http_store" }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
log = "0.4.25"
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
