[package]
name = "data_sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data_sync"
path = "src/main.rs"

[dependencies]
biab_utils.workspace = true
twine_protocol.workspace = true
twine_sql_store.workspace = true
tokio.workspace = true
futures.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
chrono.workspace = true
