[package]
name = "http_portal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http_portal"
path = "src/main.rs"

[dependencies]
twine = { git = "https://github.com/twine-protocol/twine-rs.git", rev = "409df762d934c528c23acf6728e13a115d992f72", features = ["build", "rsa"] }
twine_http_store =  { git = "https://github.com/twine-protocol/twine-rs.git", rev = "409df762d934c528c23acf6728e13a115d992f72", package = "twine_http_store" }
twine_sql_store = { git = "https://github.com/twine-protocol/twine-rs.git", rev = "409df762d934c528c23acf6728e13a115d992f72", package = "twine_sql_store", features = ["mysql", "runtime-tokio"]}
biab_utils = { path = "../biab_utils" }
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"
futures = "0.3.31"
log = "0.4.25"
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
serde_with = "3.12.0"
