[package]
name = "http_portal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http_portal"
path = "src/main.rs"

[dependencies]
twine_protocol.workspace = true
twine_sql_store.workspace = true
biab_utils.workspace = true
tokio.workspace = true
futures.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_with = "3.12.0"
warp = "0.3.7"
