[package]
name = "pulse_generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulse_generator"
path = "src/main.rs"

[dependencies]
twine = { git = "https://github.com/twine-protocol/twine-rs.git", rev = "e22a80ee7bc3eaa191214f961b511b564496232b", features = ["build", "rsa"] }
twine_http_store =  { git = "https://github.com/twine-protocol/twine-rs.git", rev = "e22a80ee7bc3eaa191214f961b511b564496232b", package = "twine_http_store" }
twine_sql_store = { git = "https://github.com/twine-protocol/twine-rs.git", rev = "e22a80ee7bc3eaa191214f961b511b564496232b", package = "twine_sql_store", features = ["mysql", "runtime-tokio"]}
twine_spec_rng = { git = "https://github.com/twine-protocol/twine_spec_rng", rev = "69f85bfd1eb7adf6db3f1b6dc1f0e3be05849fda" }
biab_utils = { path = "../biab_utils" }
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.25"
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde_yaml = "0.9.34"
serde_with = "3.12.0"
yubihsm = { version = "0.42.1", features = ["http-server", "usb", "passwords", "untested"] }