[package]
name = "pulse_generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulse_generator"
path = "src/main.rs"

[dependencies]
twine = { git = "https://github.com/twine-protocol/twine-rs.git", rev = "dab681d0fa3a00a34a280fc77955ba9f28b81b16", features = ["build", "rsa"] }
twine_http_store =  { git = "https://github.com/twine-protocol/twine-rs.git", rev = "dab681d0fa3a00a34a280fc77955ba9f28b81b16", package = "twine_http_store" }
twine_sql_store = { git = "https://github.com/twine-protocol/twine-rs.git", rev = "dab681d0fa3a00a34a280fc77955ba9f28b81b16", package = "twine_sql_store", features = ["mysql", "runtime-tokio"]}
twine_spec_rng = { git = "https://github.com/twine-protocol/twine_spec_rng", rev = "7ea84c8fe825e2bff286e82deafeac3ced05280b" }
biab_utils = { path = "../biab_utils" }
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.25"
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde_yaml = "0.9.34"
serde_with = "3.12.0"
yubihsm = { version = "0.42.1", features = ["http-server", "usb", "passwords", "untested"] }