[package]
name = "pulse_generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulse_generator"
path = "src/main.rs"

[dependencies]
twine_protocol.workspace = true
twine_sql_store.workspace = true
twine_spec_rng.workspace = true
biab_utils.workspace = true
futures.workspace = true
tokio.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
chrono.workspace = true
serde_yaml = "0.9.34"
serde_with = "3.12.0"
yubihsm = { version = "0.42.1", features = ["http-server", "usb", "passwords", "untested"] }